Fix collapsingHeaderButton styles

--- a/geofluxus/static/css/status-quo.css
+++ b/geofluxus/static/css/status-quo.css
@@ -20,7 +20,6 @@
 }
 
 
-
 #btn-filterViews {
     background: none;
     color: inherit;
@@ -33,9 +32,11 @@
     text-decoration: none !important;
 }
 
-#btn-collapse-header-origin {
+.collapsingHeaderButton {
+    width: 93% !important;
+    text-align: left;
     background: none;
-    color: inherit;
+    color: white;
     border: none;
     padding: 0;
     font: inherit;
@@ -45,52 +46,14 @@
     text-decoration: none !important;
 }
 
-#btn-collapse-header-destination {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    box-shadow: none;
-    text-decoration: none !important;
+.collapsingHeaderButton:hover {
+    background-color: inherit;
+    color: white;
 }
 
-#btn-collapse-header-flows {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    box-shadow: none;
-    text-decoration: none !important;
-}
-
-#btn-collapse-header-dimensions {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    box-shadow: none;
-    text-decoration: none !important;
-}
-
-#btn-collapse-header-vizualisations {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    box-shadow: none;
-    text-decoration: none !important;
+.collapsingHeaderButton:focus {
+    background-color: inherit;
+    color: white;
 }
 
 .flowFilterSubtitle {
@@ -119,11 +82,6 @@
 
 #activitySelectContainer {
     transition: display 1s;
-}
-
-.collapsingHeaderButton {
-    width: 93% !important;
-    text-align: left;
 }
 
 .card-header .fa {
